# pick_place_learning

./: README.md
grasping_gym_actions/: CMakeLists.txt  package.xml
grasping_gym_actions/include/grasping_gym_actions/: actions.hpp  iiwa.h  robot.h
grasping_gym_actions/src/: actions.cpp
grasping_gym_actions/srv/: makeEnvStep.srv  resetEnv.srv
grasping_gym_env/: README.md  setup.py
grasping_gym_env.egg-info/: PKG-INFO  SOURCES.txt
grasping_gym_env/devel/: .catkin  .rosinstall  setup.sh
grasping_gym_env/devel/include/grasping_gym_actions/: makeEnvStep.h  makeEnvStepRequest.h  makeEnvStepResponse.h  resetEnv.h  resetEnvRequest.h  resetEnvResponse.h
grasping_gym_env/devel/lib/grasping_gym_actions/: grasping_rl_main
grasping_gym_env/devel/lib/pkgconfig/: grasping_gym_actions.pc
grasping_gym_env/devel/lib/python2.7/dist-packages/grasping_gym_actions/srv/: __init__.py  _makeEnvStep.py  _resetEnv.py
grasping_gym_env/devel/share/common-lisp/ros/grasping_gym_actions/srv/: _package.lisp  _package_makeEnvStep.lisp  _package_resetEnv.lisp  grasping_gym_actions-srv.asd  makeEnvStep.lisp  resetEnv.lisp
grasping_gym_env/devel/share/gennodejs/ros/grasping_gym_actions/srv/: _index.js  makeEnvStep.js  resetEnv.js
grasping_gym_env/devel/share/grasping_gym_actions/cmake/: grasping_gym_actions-msg-extras.cmake  grasping_gym_actions-msg-paths.cmake  grasping_gym_actionsConfig.cmake
grasping_gym_env/devel/share/roseus/ros/grasping_gym_actions/: manifest.l
grasping_gym_env/devel/share/roseus/ros/grasping_gym_actions/srv/: makeEnvStep.l  resetEnv.l
grasping_gym_env/envs/assets/launch/: BoxGazebo.launch
grasping_gym_env/envs/box/: grasping_gym.py
grasping_gym_env/examples/: box_gym.py  log.txt  test_grasping_gym.py
grasping_gym_env/grasping_gym_env/: __init__.py
grasping_gym_env/grasping_gym_env/envs/: __init__.py  gazebo_env.py
grasping_gym_env/grasping_gym_env/envs/assets/launch/: iiwa_gripper_spawn.launch
grasping_gym_env/grasping_gym_env/envs/box/: __init__.py  grasping_gym.py
grasping_gym_env/src/grasping_gym_actions/: CMakeLists.txt
grasping_gym_env/src/grasping_gym_actions/include/grasping_gym_actions/: actions.hpp
grasping_gym_env/src/grasping_gym_actions/launch/: main.launch
grasping_gym_env/src/grasping_gym_actions/src/: actions.cpp  grasping_rl_main.cpp  iiwa.cpp  robot.cpp
