<?xml version="1.0"?>
<package>
  <name>grasping_gym_actions</name>
  <version>0.0.0</version>
  <description>Application logic package</description>


  <maintainer email="julen.urain@tekniker.es">jurain</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>message_generation</build_depend>

  <build_depend>kdl_parser</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <run_depend>kdl_parser</run_depend>
  <run_depend>trac_ik_lib</run_depend>

<build_depend>tf</build_depend>
<run_depend>tf</run_depend>



  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>

  <run_depend>roscpp</run_depend>


</package>
